--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -74,6 +74,21 @@ section h3 {
   margin-bottom: 8px;
 }
 
+.participants-list {
+  margin: 10px 0 0 0;
+  padding-left: 20px;
+  list-style-type: disc;
+  color: #333;
+  font-size: 15px;
+}
+
+.participants-list.none {
+  list-style-type: none;
+  color: #888;
+  font-style: italic;
+  padding-left: 0;
+}
+
 .form-group {
   margin-bottom: 15px;
 }
